--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 find_package(CUDA REQUIRED)
-find_package(OpenCV REQUIRED COMPONENTS imgcodecs)
+find_package(OpenCV REQUIRED COMPONENTS imgcodecs highgui)
 
 include_directories(
                     ${CMAKE_SOURCE_DIR}/include
